[package]
  name = "chirpstack-gateway-utils"
  description = "ChirpStack Gateway Utils (getting battery status, watchdog)"
  repository = "https://github.com/chirpstack/chirpstack-gateway-utils/"
  license = "MIT"
  version = "0.1.0"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2024"
  publish = false

[dependencies]
  clap = { version = "4.6", default-features = false, features = [
    "std",
    "help",
    "usage",
    "derive",
  ] }
  tokio = { version = "1.52", features = ["macros", "rt", "time"] }
  tokio-modbus = { version = "0.17", default-features = false, features = [
    "rtu",
  ] }
  tokio-serial = { version = "5.5" }
  anyhow = { version = "1.0" }
